<resources>
    <string name="app_name">Show Shenkar</string>
    <string name="dep_project_name">שם הפרויקט</string>
    <string name="dep_project_student">שם הסטודנט</string>
    <string name="dep_1">הנדסת תכנה</string>
    <string name="dep_2">תעשייה וניהול</string>
    <string name="dep_3">הנדסת תכנה</string>
    <string name="dep_4">הנדסת תכנה</string>
    <string name="dep_5">הנדסת תכנה</string>
    <string name="dep_6">הנדסת תכנה</string>
    <string name="dep_7">הנדסת תכנה</string>
    <string name="dep_8">הנדסת תכנה</string>
    <string name="dep_9">הנדסת תכנה</string>
    <string name="route_name">שם המסלול</string>
    <string name="btn_general">כללי</string>
    <string name="btn_my_routes">המסלול שלי</string>
    <string name="btn_fav_routes">מסלולים מומלצים</string>
    <string name="title_fav_routes">מסלולים מומלצים</string>
    <string name="camera_btn">מצלמה</string>
    <string name="btn_dep_location">איפה המחלקה?</string>
    <string name="department">מיקום מחלקה</string>
    <string name="project_name">שם פרוייקט</string>
    <string name="project_location">מיקום פרוייקט</string>
    <string name="preference_file_key">showshenkar_pref</string>
    <string name="preference_ids_key">showshenkar_ids</string>
    <string name="map_btn">מפה</string>

    <string name="facebook_app_id">1555398778103189</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="shenkar_title">שנקר</string>
    <string name="route_name_place_holder">שם המסלול</string>
    <string name="empty_my_route">במסך זה תראו פרוייקטים שעברתם עליהן עם האפליקציה</string>
</resources>
